--- a/main/DadosEscola.html
+++ b/main/DadosEscola.html
@@ -28,7 +28,7 @@
         <!--Alunos-->
         <div class = "mainContainer">
             <div class = "tabelaAlunos">
-                <div class = "aluno">
+                <div class = "alunoGroup">
                     <div class = "dadoAlunos">
                         <p class = "aluno">Nome do aluno da Silva</p>
                         <p class = "aluno">M</p>
@@ -40,10 +40,12 @@
                         <button class = "botaoAluno"><img src="img/plus.svg"></button>
                         <button class = "botaoAluno"><img src="img/relatory.svg"></button>
                         <button class = "botaoAluno"><img src="img/edit.svg"></button>
+                        <button class = "botaoAluno"><img src="img/triangulo.svg"></button>
                     </div>
                 </div>
             </div>
         </div>
+
     </body>
     <script src = "js/funcoes.js"></script>
     <script>
