--- a/main/NovoAluno.html
+++ b/main/NovoAluno.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Odes</title>
-        <link rel = "stylesheet" type="text/css" href="main.css">
+        <link rel = "stylesheet" type="text/css" href="./css/main.css">
     </head>
     <body>
         <!--Barra de ferramentas-->
@@ -20,7 +20,7 @@
 
         <!--Barra com superior-->
         <div class = "container barraSuperior">
-            <h1 class = "nomeTabela">Lorem ipsum doloe sit</h1>
+            <h1 id = "escola" class = "nomeTabela">Outra Escola Aleatoria</h1>
         </div>
 
         <!--Formulario aluno-->
