--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
         </div>
     </body>
     <script>
-        window.location.href = "./main/NovoAluno.html";
+        window.location.href = "./main/DadosEscola.html";
     </script>
 </html>
