--- a/main/NovoAluno.html
+++ b/main/NovoAluno.html
@@ -29,11 +29,11 @@
                 <fieldset>
                     <div class = "grupo">
                         <label for="nome">Nome:</label>
-                        <input type="text" id="nome" name="nome" style="width: 60%" value="">
+                        <input type="text" id="nome" name="nome" style="width: 60%" value=" ">
                     </div>
                     <div class = "grupo">
                         <label for="deficiencia">Deficiência:</label>
-                        <input type="text" id="deficiencia" name="deficiencia" style="width: 60%" value="">
+                        <input type="text" id="deficiencia" name="deficiencia" style="width: 60%" value=" ">
                     </div>
                     
                     <fieldset class = "conjunto">
@@ -47,22 +47,22 @@
                         </div>
                         <div class="grupo">
                             <label for="turma">Turma:</label>
-                            <input type="text" id="turma" name="turma" style="width: 10em" value="">
+                            <input type="text" id="turma" name="turma" style="width: 10em" value=" ">
                         </div>
                     </fieldset>
 
                     <div class = "grupo">
                         <label for="prof">Professora:</label>
-                        <input type="text" id="prof" name="prof" style="width: 60%" value="">
+                        <input type="text" id="prof" name="prof" style="width: 60%" value=" ">
                     </div>
                     <div class = "grupo">
                         <label for="observacoes">Observações:</label>
-                        <textarea rows="6" id="observacoes" name="observacoes" style="width: 60%" value=""></textarea>
+                        <textarea rows="6" id="observacoes" name="observacoes" style="width: 60%" value=" "></textarea>
                     </div>
 
                     <div class = "opcoes">
-                        <button type='button' class = "botao" onClick="sendNew()">Enviar</button>
-                        <button type='button' class = "botao" onClick="sendNew()">Cancelar</button>
+                        <button type='button' class = "botao alignBotao" onClick="sendNew()">Enviar</button>
+                        <button type='button' class = "botao alignBotao" onClick="sendNew()">Cancelar</button>
                     </div>
                 </fieldset>
             </form>
