salva dados com id unico

--- a/main/NovoAluno.html
+++ b/main/NovoAluno.html
@@ -68,5 +68,6 @@
             </form>
         </div>
     </body>
+    <script src="js/iniciaObjetos.js"></script>
     <script src = "js/funcoes.js"></script>
 </html>
