--- a/main/DadosEscola.html
+++ b/main/DadosEscola.html
@@ -37,24 +37,8 @@
         <div class = "mainContainer">
             <div id = "containerEdit" class = "editMode" style="display: none;">
                 <div class = "buttonArea">
-                    <button type='button' class = "botao" style="margin-right: 2em;" onClick="sendNew()">Salvar</button>
+                    <button type='button' class = "botao" style="margin-right: 2em;" onClick="atualizaDados()">Salvar</button>
                     <button type='button' class = "botao" style="margin-right: 2em;" onClick="viewMode()">Cancelar</button>
-                </div>
-
-                <div id = "edit12" class = "editaAlunos">
-                    <form class = "formularioAlunos" action = "#" method="POST">
-                        <fieldset>
-                            <input class = "inputAluno" type="text" id="nome" name="nome" style="width: 40%" value="">
-                            <select style="width: 5%" name="turno" id="turno">
-                                <option value="">--</option>
-                                <option value="T">T</option>
-                                <option value="M">M</option>
-                            </select>
-                            <input class = "inputAluno" type="text" id="turma" name="turma" style="width: 5%" value="">
-                            <input class = "inputAluno" type="text" id="prof" name="prof" style="width: 15%" value="">
-                            <input class = "inputAluno" type="text" id="deficiencia" name="deficiencia" style="width: 25%" value="">
-                        </fieldset>
-                    </form>
                 </div>
             </div>
 
@@ -63,30 +47,6 @@
                     <button type='button' class = "botao" style="margin-right: 2em;" onClick="editMode()">Editar</button>
                     <button type='button' class = "botao" style="margin-right: 2em;" onClick="Reload()">Recarregar</button>
                 </div>
-                <div class = "alunoGroup">
-                    <div id ="dados12" class = "dadoAlunos">
-                        <p style="width: 45%">Nome do aluno da Silva</p>
-                        <p style="width: 5%">M</p>
-                        <p style="width: 5%">3°A</p>
-                        <p style="width: 15%">Professora</p>
-                        <p style="width: 30%">Def. do aluno - CID</p>
-                    </div>                    
-                    <div class = "acoesAluno">
-                        <button onclick="plusButton(12)"><img src="img/plus.svg"></button>
-                        <button onclick="relatoryButton(12)"><img src="img/relatory.svg"></button>
-                        <button><img src="img/edit.svg"></button>
-                    </div>
-
-                    <div id = "12" class = "plusArea">
-                        <div class = "opButtons">
-                            <button onclick="sendRelatory()">Salvar</button>
-                            <button onclick="plusButton()">Cancelar</button>
-                        </div>
-                        <div id = "addRelatory" class = "inputContainer">
-                            <textarea rows="6" id="add12" style="width: 99%" value=""></textarea>
-                        </div>
-                    </div> 
-                </div> 
             </div>
         </div>
     </body>
@@ -103,7 +63,8 @@
 
         function init(){  
             //PEGAR ESCOLA DA PAGINA ANTERIOR
-            let res = alunos.consultData({'escola': 'Escola Aleatoria 1'}, 'nome');
+            let res = alunos.consultData({'escola': 'Outra Escola Aleatoria'}, 'nome');
+            console.log(res);
             let cont = document.getElementById("container");
             //adiciona os objetos dos alunos na pagina em ordem
             for(let i = 0; i < Object.keys(res).length; i++)
@@ -112,7 +73,7 @@
 
         function initEditMode()
         {
-            let res = alunos.consultData({'escola': 'Escola Aleatoria 1'}, 'nome');
+            let res = alunos.consultData({'escola': 'Outra Escola Aleatoria'}, 'nome');
             console.log(res);
             let cont = document.getElementById("containerEdit");
             //adiciona os objetos dos alunos na pagina em ordem
@@ -199,6 +160,11 @@
                 item[0].parentNode.removeChild(item[0]);
             }
             init();
+        }
+        
+        function atualizaDados()
+        {
+            alunos.updateData({"nome":"Joao"}, "id", 1);
         }
         //FECHA MODAL
         var span = document.getElementsByClassName("close")[0];
