implementa metodo de alteracao

--- a/main/DadosEscola.html
+++ b/main/DadosEscola.html
@@ -164,7 +164,7 @@
         
         function atualizaDados()
         {
-            alunos.updateData({"nome":"Joao"}, "id", 1);
+            alunos.updateData({"nome":"Joao"}, ["nome"], 1);
         }
         //FECHA MODAL
         var span = document.getElementsByClassName("close")[0];
