--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     </body>
     <script>
         window.location.href = "./main/DadosEscola.html";
+        //window.location.href = "./main/NovoAluno.html";
     </script>
 </html>
