--- a/main/NovoAluno.html
+++ b/main/NovoAluno.html
@@ -20,7 +20,7 @@
 
         <!--Barra com superior-->
         <div class = "container barraSuperior">
-            <h1 id = "escola" class = "nomeTabela">Outra Escola Aleatoria</h1>
+            <h1 id = "escola" class = "nomeTabela">Escola Aleatoria +1</h1>
         </div>
 
         <!--Formulario aluno-->
@@ -40,7 +40,7 @@
                         <div class="grupo">
                             <label for="turno">Turno:</label>
                             <select name="turno" id="turno">
-                                <option value="">--</option>
+                                <option value="" selected>--</option>
                                 <option value="T">T</option>
                                 <option value="M">M</option>
                             </select>
