--- a/main/DadosEscola.html
+++ b/main/DadosEscola.html
@@ -191,6 +191,11 @@
             }
             viewMode();
         }
+        
+        function Reload()
+        {
+            location.reload();
+        }
         //FECHA MODAL
         var span = document.getElementsByClassName("close")[0];
         span.onclick = () => fechaModal();
