inicia pag home e organiza css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         </div>
     </body>
     <script>
-        window.location.href = "./main/DadosEscola.html";
+        //window.location.href = "./main/DadosEscola.html";
         //window.location.href = "./main/NovoAluno.html";
+        window.location.href = "./main/Home.html";
     </script>
 </html>
