--- a/main/NovoAluno.html
+++ b/main/NovoAluno.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Odes</title>
         <link rel = "stylesheet" type="text/css" href="./css/main.css">
+        <link rel = "stylesheet" type="text/css" href="./css/formularioPage.css">
     </head>
     <body>
         <!--Barra de ferramentas-->
