--- a/main/DadosEscola.html
+++ b/main/DadosEscola.html
@@ -55,8 +55,8 @@
 
     <script>
         const contr = require(path.concat("/libs/objects"));
-        let construtorAlunos = contr.construtorAlunos;
-        let construtor = new construtorAlunos();//constroi objetos HTML
+        let construtorObj = contr.construtorObj;
+        let construtor = new construtorObj();//constroi objetos HTML
         
         //tempo para iniciar a aplicacao
         setTimeout(() => { init(); }, 1000);//  (?)     FAZER LOOP TENTANDO + PAG CARREGANDO 
