--- a/main/NovoAluno.html
+++ b/main/NovoAluno.html
@@ -21,7 +21,7 @@
 
         <!--Barra com superior-->
         <div class = "container barraSuperior">
-            <h1 id = "escola" class = "nomeTabela">Escola Aleatoria +1</h1>
+            <h1 id = "nomeEscola" class = "nomeTabela">Escola Aleatoria +1</h1>
         </div>
 
         <!--Formulario aluno-->
@@ -56,12 +56,21 @@
                         <label for="prof">Professora:</label>
                         <input type="text" id="prof" name="prof" style="width: 60%" value=" ">
                     </div>
+                    <!--a opcao da escola so aparece se estiver editando um aluno-->
+                    <div class = "grupo ShowEdit">
+                        <label for="escolaOptions">Escola:</label>
+                        <select name="escolaOptions" id="escolaOptions" style="width: 61%">
+                            
+                        </select>
+                    </div>
+
                     <div class = "grupo">
                         <label for="observacoes">Observações:</label>
                         <textarea rows="6" id="observacoes" name="observacoes" style="width: 60%" value=" "></textarea>
                     </div>
 
                     <div class = "opcoes">
+                        <button type='button' class = "botao alignBotao ShowEdit" onClick="sendNew()">Deletar Aluno</button>
                         <button type='button' class = "botao alignBotao" onClick="sendNew()">Enviar</button>
                         <button type='button' class = "botao alignBotao" onClick="sendNew()">Cancelar</button>
                     </div>
@@ -71,4 +80,51 @@
     </body>
     <script src="js/iniciaObjetos.js"></script>
     <script src = "js/funcoes.js"></script>
+    <script>
+        var edita = sessionStorage.getItem("editaAluno");
+        //PEGA ESCOLA SELECIONADA
+        var escola = sessionStorage.getItem('escola');
+        //coloca nome da escola
+        document.getElementById("nomeEscola").innerHTML = escola;
+
+        if(edita != "null")
+        {
+            let elements = document.getElementsByClassName("ShowEdit");
+            for(let i = 0; i < elements.length; i++)
+                elements[i].style.display = "block";
+                
+            //setTimeout(() => { initEscolas(); initInput() }, 1000);
+        }
+
+        async function initInput()
+        {
+            let id = parseInt(sessionStorage.getItem('editaAluno'));
+            //busca o aluno a partir do id
+            let aluno = await alunos.consultData({"id": id}, 'id');
+            console.log(aluno);
+            document.getElementById("nome").value = aluno[0].nome;
+            document.getElementById("deficiencia").value = aluno[0].deficiencia;
+            document.getElementById("turno").value = aluno[0].turno;
+            document.getElementById("turma").value = aluno[0].turma;
+            document.getElementById("prof").value = aluno[0].prof;
+        }
+
+        async function initEscolas()
+        {
+            let res =  await escolas.receiveData();
+            console.log(res);
+            var escola = sessionStorage.getItem('escola');
+
+            let selec = document.getElementById("escolaOptions");
+            for(let i = 0; i < Object.keys(res).length; i++)
+            {
+                var opt = document.createElement("option");
+                opt.value = res[i].nome;
+                opt.appendChild( document.createTextNode(res[i].nome) );
+                if(res[i].nome == escola)
+                    opt.selected = true;
+                selec.add(opt, selec.options[i]);
+            }
+        }
+    </script>
 </html>
