--- a/main/NovoAluno.html
+++ b/main/NovoAluno.html
@@ -92,15 +92,16 @@
             let elements = document.getElementsByClassName("ShowEdit");
             for(let i = 0; i < elements.length; i++)
                 elements[i].style.display = "block";
-                
-            //setTimeout(() => { initEscolas(); initInput() }, 1000);
+
+            initEscolas();
+            initInput();
         }
 
         async function initInput()
         {
             let id = parseInt(sessionStorage.getItem('editaAluno'));
             //busca o aluno a partir do id
-            let aluno = await alunos.consultData({"id": id}, 'id');
+            let aluno = await alunos.searchData({"id": id}, 'id');
             console.log(aluno);
             document.getElementById("nome").value = aluno[0].nome;
             document.getElementById("deficiencia").value = aluno[0].deficiencia;
@@ -111,7 +112,13 @@
 
         async function initEscolas()
         {
-            let res =  await escolas.receiveData();
+            let res;
+            console.log("aqui1");
+            res = await escolas.getData();
+            if(res == null){
+                console.log("ERRO");
+                return;
+            }
             console.log(res);
             var escola = sessionStorage.getItem('escola');
 
