--- a/main/NovoAluno.html
+++ b/main/NovoAluno.html
@@ -70,9 +70,9 @@
                     </div>
 
                     <div class = "opcoes">
-                        <button type='button' class = "botao alignBotao ShowEdit" onClick="sendNew()">Deletar Aluno</button>
+                        <button type='button' class = "botao alignBotao ShowEdit" onClick="DeletaAluno()">Deletar Aluno</button>
                         <button type='button' class = "botao alignBotao" onClick="sendNew()">Enviar</button>
-                        <button type='button' class = "botao alignBotao" onClick="sendNew()">Cancelar</button>
+                        <button type='button' class = "botao alignBotao" onClick="returnPage()">Cancelar</button>
                     </div>
                 </fieldset>
             </form>
@@ -102,7 +102,7 @@
             let id = parseInt(sessionStorage.getItem('editaAluno'));
             //busca o aluno a partir do id
             let aluno = await alunos.searchData({"id": id}, 'id');
-            console.log(aluno);
+        
             document.getElementById("nome").value = aluno[0].nome;
             document.getElementById("deficiencia").value = aluno[0].deficiencia;
             document.getElementById("turno").value = aluno[0].turno;
@@ -119,7 +119,7 @@
                 console.log("ERRO");
                 return;
             }
-            console.log(res);
+
             var escola = sessionStorage.getItem('escola');
 
             let selec = document.getElementById("escolaOptions");
