--- a/main/NovoAluno.html
+++ b/main/NovoAluno.html
@@ -70,7 +70,7 @@
                     </div>
 
                     <div class = "opcoes">
-                        <button type='button' class = "botao alignBotao ShowEdit" onClick="DeletaAluno()">Deletar Aluno</button>
+                        <button type='button' class = "botao alignBotao ShowEdit" onClick="deletaAluno()">Deletar Aluno</button>
                         <button type='button' class = "botao alignBotao" onClick="sendNew()">Enviar</button>
                         <button type='button' class = "botao alignBotao" onClick="returnPage()">Cancelar</button>
                     </div>
